--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <html lang="en" dir="ltr">
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Morse Generator</title>
 		<link rel="stylesheet" href="index.css">
 	</head>
