Conditional switch of display elements based on toggle

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 		</div>
 		<textarea autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" placeholder="Start Typing" name="" id="input" cols="30" rows="10"></textarea>
 
-		<div class="ui compact segment">
+		<div class="ui compact segment" id="morseres">
 			<p>Morse Code from text</p>
 			<div id="res"></div>
     </div>
-		<div class="ui compact segment">
+		<div class="ui compact segment" id="textres">
 			<p>Text from Morse Code</p>
 			<div id="text"></div>
     </div>
