--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 	<head>
@@ -11,7 +9,7 @@
 		<script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.3/dist/semantic.min.js"></script>
 	</head>
 	<body>
-		<h1 class="textTop">Start typing and your text will turn into morse code</h1>
+		<h1 class="textTop">Morse code</h1>
 		<div class="ui compact menu">
 		  <a class="item copy" id="playButton" name="code">
 		    <i class="bullhorn icon"></i>
@@ -31,7 +29,7 @@
 				<label id="label" class="label">Text to morse code</label>
 			</div>
 		</div>
-		<textarea autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" placeholder="Start Typing" name="" id="input" cols="30" rows="10"></textarea>
+		<textarea autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" placeholder="Type here" name="" id="input" cols="30" rows="10"></textarea>
 
 		<div class="ui compact segment" id="morseres">
 			<p>Morse Code from text</p>
